chore(slack-notifications) setup integrations with slack
Currently there is no way for one to get notified via slack
when a status changes.

This sets up the different integrations with slack so as to
get notifications via slack.

[Finishes #152714198]

chore(slack-notifications) setup integrations with sl

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang = "en">
 
    <head>
+       <script
+        src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-3.min.js"
+        data-apikey="06e3ab138ed59c6197bbd947595781ee">
+        </script>
       <meta charset = "UTF-8">
       <title>Vipasho - The News Feed Application</title>
    </head>
